Popup class correction

--- a/css/styles.css
+++ b/css/styles.css
@@ -1579,6 +1579,7 @@ footer {
     top: 0;
     left: 0;
     z-index: 10000;
+    justify-content: center;
     
 }
 
@@ -1723,7 +1724,7 @@ footer {
 /* Попап success заказ обратной связи */
 
 .callback-popup-success-body {
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
