--- a/src/css/popups.css
+++ b/src/css/popups.css
@@ -7,7 +7,6 @@
     position: fixed;
     top: 0;
     left: 0;
-    /* position: fixed; */
     justify-content: center;
     z-index: 10000;
     width: 100%;
@@ -15,6 +14,7 @@
     opacity: 0;
     transition: opacity .3s;
     pointer-events: none;
+    overflow-y: hidden;
 }
 
 .popup.active {
