--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,6 +16,11 @@ ul {
     opacity: 1;
 }
 
+.flex-col {
+    display: flex;
+    flex-direction: column;
+}
+
 .form-field {
     width: 100%;
     padding: 14px 16px;
@@ -371,4 +376,25 @@ h2 {
     background-color: #eeeef2;
     position: relative;
     cursor: pointer;
+}
+
+/* Табы */
+.tabs-block {
+    padding: 24px 24px 0 24px;
+    border-bottom: 1px solid #dddddd;
+    position: relative;
+    width: 100%;
+}
+
+.tab-content {
+    opacity: 0;
+    pointer-events: none;
+    position: absolute;
+}
+
+.tab-content.active {
+    transition: opacity .3s;
+    opacity: 1;
+    pointer-events: auto;
+    position: relative;
 }
