--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -381,32 +381,41 @@
 
 .catalog-menu {
     margin-right: 20px;
-    border: 1px solid #ddd;
-    border-radius: 2px;
-    display: flex;
-    flex-direction: column;
     min-width: 23.75%;
+    display: flex;
+    /* display: flex;
+    flex-direction: column; */
+    position: relative;
 }
 
 .icon-arrow-catalog {
     position: absolute;
     right: 24px;
+    
 }
 
-.main-menu-item {
-    border-bottom: none;
-    border-bottom: 1px solid #ddd;
+.catalog-menu__main-menu {
+    border-radius: 2px;
 }
 
-.main-menu-elt {
+.main-menu__item {
+    display: flex;
+    border: 1px solid #ddd;
+
+    position: relative;
+    align-items:center;
+}
+
+.main-menu__elt {
     display: flex;
     align-items: center;
     padding: 12px 24px;
     position: relative;
     color: #000;
+    flex-basis: 100%;
 }
 
-.main-menu-elt > p {
+.main-menu__elt > p {
     padding-right: 4px;
 }
 
@@ -416,17 +425,24 @@
     transform: rotate(270deg);
 }
 
-.main-menu-elt:hover {
+.main-menu__elt:hover {
     background-color: #3b52f5;
     color: #fff;
 }
 
-.main-menu-elt:hover .icon-drop-right {
-    color: rgb(255, 255, 255);
+.main-menu__elt:hover .icon-drop {
+    color: #fff;
+    transition: all .3s;
 }
 
-.main-menu-elt:last-child {
-    
+.main-menu__elt:last-child {
+    border-bottom: none;
+}
+
+.catalog-menu__submenu {
+    position: absolute;
+    right: 0;
+    min-width: 23.75%;
 }
 
 .banner-and-tabs {
