--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -388,6 +388,23 @@
     position: relative;
 }
 
+.submenu {
+    align-self: top;
+    position: absolute;
+    left: 297px;
+    top: -1px;
+    width: 100%;
+    opacity: 0;
+    transition: all 0.3s;
+    pointer-events: none;
+}
+
+.submenu.active {
+    opacity: 1;
+    transition: all 0.3s;
+    pointer-events: auto;
+}
+
 .icon-arrow-catalog {
     position: absolute;
     right: 24px;
@@ -400,10 +417,14 @@
 
 .main-menu__item {
     display: flex;
-    border: 1px solid #ddd;
-
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
     position: relative;
-    align-items:center;
+    align-items: auto;
+}
+.main-menu__item:first-child {
+    border: 1px solid #ddd;
 }
 
 .main-menu__elt {
@@ -413,6 +434,7 @@
     position: relative;
     color: #000;
     flex-basis: 100%;
+    background-color: #fff
 }
 
 .main-menu__elt > p {
