change carousel module to Splide

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,6 +16,10 @@ ul {
     opacity: 1;
 }
 
+.scroll__active {
+    display: flex;
+}
+
 .flex-col {
     display: flex;
     flex-direction: column;
