--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,8 +16,8 @@ ul {
     opacity: 1;
 }
 
-.scroll__active {
-    display: flex;
+.hidden {
+    opacity: 0;
 }
 
 .flex-col {
@@ -390,15 +390,32 @@ h2 {
     width: 100%;
 }
 
-.tab-content {
+/* .tab-content {
     opacity: 0;
     pointer-events: none;
     position: absolute;
+    overflow: scroll;
 }
 
 .tab-content.active {
     transition: opacity .3s;
     opacity: 1;
+    pointer-events: auto;
+    position: relative;
+} */
+
+.tab-content {
+    display: none;
+    opacity: 0;
+    pointer-events: none;
+    position: absolute;
+    overflow: scroll;
+}
+
+.tab-content.active {
+    display: block;
+    transition: opacity .3s;
+    /* opacity: 1; */
     pointer-events: auto;
     position: relative;
 }
