finished hits carousel for mobile

--- a/src/css/media.css
+++ b/src/css/media.css
@@ -490,6 +490,7 @@
 	    margin-right: -5px;
 	    /* overflow-x: hidden;
 	    scroll-snap-type: x mandatory; */
+		flex-direction: column;
 	    
 	}
 
