--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1330,6 +1330,7 @@ position: relative;
     flex-direction: column;
     padding-right: 55px;
     width: 70%;
+    align-items: center;
 }
 
 .hits-items-row {
