--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -106,6 +106,7 @@
 
 /*Иконки Icomoon*/
 
+
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
@@ -115,442 +116,449 @@
   font-variant: normal;
   text-transform: none;
   line-height: 1;
+
+  /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-
-.icon-radio-check:before {
-  content: "\e95d";
-  color: #fff;
-}
-.icon-error:before {
-  content: "\e95c";
-  color: #d91515;
-}
-.icon-success:before {
-  content: "\e95b";
-  color: #46b434;
-}
-.icon-return-copy:before {
-  content: "\e949";
-  
-}
-.icon-valentines-heart-1:before {
-  content: "\e948";
-}
 .icon-champagne-glass .path1:before {
-  content: "\e900";
+  content: "\e901";
   color: rgb(166, 177, 251);
 }
 .icon-champagne-glass .path2:before {
-  content: "\e901";
+  content: "\e91f";
   margin-left: -0.900390625em;
   color: rgb(0, 0, 0);
 }
 .icon-champagne-glass .path3:before {
-  content: "\e902";
+  content: "\e923";
   margin-left: -0.900390625em;
   color: rgb(0, 0, 0);
 }
 .icon-champagne-glass .path4:before {
-  content: "\e903";
+  content: "\e924";
   margin-left: -0.900390625em;
   color: rgb(166, 177, 251);
 }
 .icon-champagne-glass .path5:before {
-  content: "\e904";
+  content: "\e925";
   margin-left: -0.900390625em;
   color: rgb(0, 0, 0);
 }
 .icon-champagne-glass .path6:before {
-  content: "\e905";
+  content: "\e926";
   margin-left: -0.900390625em;
   color: rgb(0, 0, 0);
 }
 .icon-champagne-glass .path7:before {
-  content: "\e906";
+  content: "\e927";
   margin-left: -0.900390625em;
   color: rgb(0, 0, 0);
 }
 .icon-champagne-glass .path8:before {
-  content: "\e907";
+  content: "\e928";
   margin-left: -0.900390625em;
   color: rgb(0, 0, 0);
 }
 .icon-champagne-glass .path9:before {
-  content: "\e908";
+  content: "\e929";
   margin-left: -0.900390625em;
   color: rgb(0, 0, 0);
 }
 .icon-champagne-glass .path10:before {
-  content: "\e909";
+  content: "\e92a";
   margin-left: -0.900390625em;
   color: rgb(0, 0, 0);
 }
 .icon-champagne-glass .path11:before {
-  content: "\e90a";
+  content: "\e92b";
   margin-left: -0.900390625em;
   color: rgb(0, 0, 0);
 }
 .icon-clean .path1:before {
-  content: "\e90b";
+  content: "\e92c";
   color: rgb(166, 177, 251);
 }
 .icon-clean .path2:before {
-  content: "\e90c";
+  content: "\e92d";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
 .icon-clean .path3:before {
-  content: "\e90d";
+  content: "\e92e";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
 .icon-clean .path4:before {
-  content: "\e90e";
+  content: "\e92f";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
 .icon-clean .path5:before {
-  content: "\e90f";
+  content: "\e930";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
 .icon-dish .path1:before {
-  content: "\e910";
+  content: "\e931";
   color: rgb(166, 177, 251);
 }
 .icon-dish .path2:before {
-  content: "\e911";
+  content: "\e932";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
 .icon-dish .path3:before {
-  content: "\e912";
+  content: "\e933";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
 .icon-dish .path4:before {
-  content: "\e913";
+  content: "\e934";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
 .icon-dish .path5:before {
-  content: "\e914";
+  content: "\e935";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
 .icon-dish .path6:before {
-  content: "\e915";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-}
-.icon-dish .path7:before {
-  content: "\e916";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-}
-.icon-dish .path8:before {
-  content: "\e917";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-}
-.icon-dish .path9:before {
-  content: "\e918";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-}
-.icon-dish .path10:before {
-  content: "\e919";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-}
-.icon-dish .path11:before {
-  content: "\e91a";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-}
-.icon-fashion .path1:before {
-  content: "\e91b";
-  color: rgb(166, 177, 251);
-}
-.icon-fashion .path2:before {
-  content: "\e91c";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-}
-.icon-fashion .path3:before {
-  content: "\e91d";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-}
-.icon-fashion .path4:before {
-  content: "\e91e";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-}
-.icon-fashion .path5:before {
-  content: "\e91f";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-}
-.icon-gift-box .path1:before {
-  content: "\e920";
-  color: rgb(0, 0, 0);
-}
-.icon-gift-box .path2:before {
-  content: "\e921";
-  margin-left: -1em;
-  color: rgb(166, 177, 251);
-}
-.icon-gift-box .path3:before {
-  content: "\e922";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-}
-.icon-gift-box .path4:before {
-  content: "\e923";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-}
-.icon-school-material .path1:before {
-  content: "\e924";
-  color: rgb(166, 177, 251);
-}
-.icon-school-material .path2:before {
-  content: "\e925";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-}
-.icon-school-material .path3:before {
-  content: "\e926";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-}
-.icon-school-material .path4:before {
-  content: "\e927";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-}
-.icon-school-material .path5:before {
-  content: "\e928";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-}
-.icon-school-material .path6:before {
-  content: "\e929";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-}
-.icon-shopping-bag .path1:before {
-  content: "\e92a";
-  color: rgb(166, 177, 251);
-}
-.icon-shopping-bag .path2:before {
-  content: "\e92b";
-  margin-left: -0.904296875em;
-  color: rgb(0, 0, 0);
-}
-.icon-shopping-bag .path3:before {
-  content: "\e92c";
-  margin-left: -0.904296875em;
-  color: rgb(0, 0, 0);
-}
-.icon-shopping-bag .path4:before {
-  content: "\e92d";
-  margin-left: -0.904296875em;
-  color: rgb(0, 0, 0);
-}
-.icon-shopping-bag .path5:before {
-  content: "\e92e";
-  margin-left: -0.904296875em;
-  color: rgb(0, 0, 0);
-}
-.icon-shopping-bag .path6:before {
-  content: "\e92f";
-  margin-left: -0.904296875em;
-  color: rgb(0, 0, 0);
-}
-.icon-shopping-bag .path7:before {
-  content: "\e930";
-  margin-left: -0.904296875em;
-  color: rgb(0, 0, 0);
-}
-.icon-shopping-bag .path8:before {
-  content: "\e931";
-  margin-left: -0.904296875em;
-  color: rgb(0, 0, 0);
-}
-.icon-shopping-bag .path9:before {
-  content: "\e932";
-  margin-left: -0.904296875em;
-  color: rgb(0, 0, 0);
-}
-.icon-shopping-bag .path10:before {
-  content: "\e933";
-  margin-left: -0.904296875em;
-  color: rgb(0, 0, 0);
-}
-.icon-syringe .path1:before {
-  content: "\e934";
-  color: rgb(0, 0, 0);
-}
-.icon-syringe .path2:before {
-  content: "\e935";
-  margin-left: -1em;
-  color: rgb(166, 177, 251);
-}
-.icon-syringe .path3:before {
   content: "\e936";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
-.icon-tyre .path1:before {
+.icon-dish .path7:before {
   content: "\e937";
-  color: rgb(166, 177, 251);
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
 }
-.icon-tyre .path2:before {
+.icon-dish .path8:before {
   content: "\e938";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
-.icon-tyre .path3:before {
+.icon-dish .path9:before {
   content: "\e939";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
-.icon-tyre .path4:before {
+.icon-dish .path10:before {
   content: "\e93a";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
-.icon-tyre .path5:before {
+.icon-dish .path11:before {
   content: "\e93b";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
-.icon-tyre .path6:before {
+.icon-fashion .path1:before {
   content: "\e93c";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
+  color: rgb(166, 177, 251);
 }
-.icon-tyre .path7:before {
+.icon-fashion .path2:before {
   content: "\e93d";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
-.icon-avatar:before {
+.icon-fashion .path3:before {
   content: "\e93e";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
 }
-.icon-box:before {
+.icon-fashion .path4:before {
   content: "\e93f";
-  color: #d91515;
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
 }
-.icon-close:before {
+.icon-fashion .path5:before {
   content: "\e940";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
 }
-.icon-discount .path1:before {
+.icon-gift-box .path1:before {
   content: "\e941";
-  color: rgb(166, 177, 251);
+  color: rgb(0, 0, 0);
 }
-.icon-discount .path2:before {
+.icon-gift-box .path2:before {
   content: "\e942";
   margin-left: -1em;
-  color: rgb(0, 0, 0);
-}
-.icon-drop:before {
-  content: "\e943";
-  /* color: #939393; */
-}
-.icon-fire:before {
-  content: "\e944";
-  color: #d91515;
-}
-.icon-galka:before {
-  content: "\e945";
-  color: #fff;
-}
-.icon-geo:before {
-  content: "\e946";
-  color: #d91515;
-}
-.icon-heart:before {
-  content: "\e947";
-}
-.icon-mobile-menu:before {
-  content: "\e94a";
-  color: #3b52f5;
-}
-.icon-phone:before {
-  content: "\e94b";
-  color: #d91515;
-}
-.icon-return:before {
-  content: "\e94c";
-}
-.icon-ruble:before {
-  content: "\e94d";
-  color: #d91515;
-}
-.icon-search:before {
-  content: "\e94e";
-  color: #939393;
-}
-.icon-shopping-cart:before {
-  content: "\e94f";
-}
-.icon-tracking .path1:before {
-  content: "\e950";
   color: rgb(166, 177, 251);
 }
-.icon-tracking .path2:before {
+.icon-gift-box .path3:before {
+  content: "\e943";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-gift-box .path4:before {
+  content: "\e944";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-school-material .path1:before {
+  content: "\e945";
+  color: rgb(166, 177, 251);
+}
+.icon-school-material .path2:before {
+  content: "\e946";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-school-material .path3:before {
+  content: "\e947";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-school-material .path4:before {
+  content: "\e948";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-school-material .path5:before {
+  content: "\e949";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-school-material .path6:before {
+  content: "\e94a";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-shopping-bag .path1:before {
+  content: "\e94b";
+  color: rgb(166, 177, 251);
+}
+.icon-shopping-bag .path2:before {
+  content: "\e94c";
+  margin-left: -0.904296875em;
+  color: rgb(0, 0, 0);
+}
+.icon-shopping-bag .path3:before {
+  content: "\e94d";
+  margin-left: -0.904296875em;
+  color: rgb(0, 0, 0);
+}
+.icon-shopping-bag .path4:before {
+  content: "\e94e";
+  margin-left: -0.904296875em;
+  color: rgb(0, 0, 0);
+}
+.icon-shopping-bag .path5:before {
+  content: "\e94f";
+  margin-left: -0.904296875em;
+  color: rgb(0, 0, 0);
+}
+.icon-shopping-bag .path6:before {
+  content: "\e950";
+  margin-left: -0.904296875em;
+  color: rgb(0, 0, 0);
+}
+.icon-shopping-bag .path7:before {
   content: "\e951";
-  margin-left: -1em;
+  margin-left: -0.904296875em;
   color: rgb(0, 0, 0);
 }
-.icon-tracking .path3:before {
+.icon-shopping-bag .path8:before {
   content: "\e952";
-  margin-left: -1em;
+  margin-left: -0.904296875em;
   color: rgb(0, 0, 0);
 }
-.icon-tracking .path4:before {
+.icon-shopping-bag .path9:before {
   content: "\e953";
-  margin-left: -1em;
+  margin-left: -0.904296875em;
   color: rgb(0, 0, 0);
 }
-.icon-tracking .path5:before {
+.icon-shopping-bag .path10:before {
   content: "\e954";
-  margin-left: -1em;
+  margin-left: -0.904296875em;
   color: rgb(0, 0, 0);
 }
-.icon-tracking .path6:before {
+.icon-syringe .path1:before {
   content: "\e955";
-  margin-left: -1em;
   color: rgb(0, 0, 0);
 }
-.icon-tracking .path7:before {
+.icon-syringe .path2:before {
   content: "\e956";
   margin-left: -1em;
-  color: rgb(0, 0, 0);
+  color: rgb(166, 177, 251);
 }
-.icon-tracking .path8:before {
+.icon-syringe .path3:before {
   content: "\e957";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
-.icon-tracking .path9:before {
+.icon-tyre .path1:before {
   content: "\e958";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
+  color: rgb(166, 177, 251);
 }
-.icon-tracking .path10:before {
+.icon-tyre .path2:before {
   content: "\e959";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
-.icon-tracking .path11:before {
+.icon-tyre .path3:before {
   content: "\e95a";
   margin-left: -1em;
   color: rgb(0, 0, 0);
+}
+.icon-tyre .path4:before {
+  content: "\e95b";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-tyre .path5:before {
+  content: "\e95c";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-tyre .path6:before {
+  content: "\e95d";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-tyre .path7:before {
+  content: "\e95e";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-heart-active:before {
+  content: "\e960";
+  color: #d91515;
+}
+.icon-avatar:before {
+  content: "\e902";
+}
+.icon-box:before {
+  content: "\e903";
+  color: #d91515;
+}
+.icon-close:before {
+  content: "\e904";
+}
+.icon-discount .path1:before {
+  content: "\e905";
+  color: rgb(166, 177, 251);
+}
+.icon-discount .path2:before {
+  content: "\e906";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-drop:before {
+  content: "\e907";
+  color: #939393;
+}
+.icon-error:before {
+  content: "\e908";
+  color: #d91515;
+}
+.icon-fire:before {
+  content: "\e909";
+  color: #d91515;
+}
+.icon-galka:before {
+  content: "\e90a";
+  color: #fff;
+}
+.icon-geo:before {
+  content: "\e90b";
+  color: #d91515;
+}
+.icon-heart:before {
+  content: "\e900";
+}
+.icon-mobile-menu:before {
+  content: "\e920";
+  color: #3b52f5;
+}
+.icon-phone:before {
+  content: "\e921";
+  color: #d91515;
+}
+.icon-radio-check:before {
+  content: "\e922";
+  color: #fff;
+}
+.icon-return-copy:before {
+  content: "\e90c";
+  color: #d6d6d6;
+}
+.icon-return:before {
+  content: "\e90d";
+  color: #d6d6d6;
+}
+.icon-ruble:before {
+  content: "\e90e";
+  color: #000;
+}
+.icon-search:before {
+  content: "\e90f";
+  color: #939393;
+}
+.icon-shopping-cart:before {
+  content: "\e910";
+}
+.icon-success:before {
+  content: "\e911";
+  color: #46b434;
+}
+.icon-tracking .path1:before {
+  content: "\e912";
+  color: rgb(166, 177, 251);
+}
+.icon-tracking .path2:before {
+  content: "\e913";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-tracking .path3:before {
+  content: "\e914";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-tracking .path4:before {
+  content: "\e915";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-tracking .path5:before {
+  content: "\e916";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-tracking .path6:before {
+  content: "\e917";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-tracking .path7:before {
+  content: "\e918";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-tracking .path8:before {
+  content: "\e919";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-tracking .path9:before {
+  content: "\e91a";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-tracking .path10:before {
+  content: "\e91b";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-tracking .path11:before {
+  content: "\e91c";
+  margin-left: -1em;
+  color: rgb(0, 0, 0);
+}
+.icon-valentines-heart-1:before {
+  content: "\e91d";
+  color: #000;
 }
